# GraphQL-Bookstore

./: AGENTS.md  CMakeLists.txt  DATABASE_SETUP.md  DOCKER.md  Dockerfile  README.md  bookstore-server  build.sh  docker-compose.yml  fly.toml  list.md  render.yaml  sample_data.sql  test_api.sh
.cache/clangd/index/: main.cpp.CC84133123600324.idx
.github/workflows/: docker-build.yml  fly-deploy.yml
config/: settings.json
include/auth/: authorization.h  jwt_handler.h
include/business/: cart_manager.h  inventory_manager.h  payment_processor.h
include/database/: connection.h
include/graphql/: query_parser.h  resolver.h  schema.h
include/resolvers/: admin_resolvers.h  order_resolvers.h  user_resolvers.h
include/utils/: simple_json.h  webhook_manager.h
scripts/: init-db.sh  init_database.sql  seed.sql
src/: graphql_handler.cpp  graphql_handler.h  html_generator.cpp  main.cpp  utils.cpp  utils.h
src/auth/: authorization.cpp  jwt_handler.cpp
src/business/: cart_manager.cpp  inventory_manager.cpp  payment_processor.cpp
src/database/: connection.cpp
src/graphql/: query_parser.cpp  resolver.cpp  schema.cpp
src/resolvers/: admin_resolvers.cpp  order_resolvers.cpp  user_resolvers.cpp
src/utils/: webhook_manager.cpp
